# clasificacion-de-reportes

./: .gitattributes  .gitignore  README.md  docker-compose.yml
document_service/: Dockerfile  main.py  pyproject.toml
frontend_app/: package-lock.json  package.json
frontend_app/app/: page.js
frontend_app/app/componentes/: Formulario.js
ml_service/: Dockerfile  main.py  pyproject.toml
ml_service/model/: trained_model.pkl
ml_service/trainning/: train_model.py
ml_service/trainning/data/: reportes.csv
