[tool.poetry]
name = "document-service"
version = "0.1.0"
description = ""
authors = ["Felipe Higuera <felipehiguera27@gmail.com>"] # Authors in string format for Poetry
readme = "README.md"
package-mode = false # Add this if it's a service, not a library (similar to ml_service)

[tool.poetry.dependencies]
python = ">=3.12,<3.13" # Specify Python version here for Poetry to manage
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
sqlalchemy = "^2.0.41"
psycopg2-binary = "^2.9.10"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"